# dfm_pattern_match

./: .gitignore  Makefile  create_multi_poly_gds.py  create_simple_oasis.py  debug_zoom.gdb  design_layout_viewer.cpp  design_layout_viewer.pro  dfm_hierarchy_construction.cpp  dfm_pattern_capture  dfm_pattern_capture.cpp  dfm_pattern_match.pro  generate_oasis_test_files.py  layoutwidget.cpp  layoutwidget.h  mask_grid.oas  moc_layoutwidget.cpp  testlayoutwidget  testlayoutwidget.cpp  write_oasis.py  zoom_debug.gdb
layout_viewer/: design_layout_viewer.cpp
myenv/: pyvenv.cfg
pattern-library-gui/: .gitignore  CMakeLists.txt  CMakeLists.txt.fixed  CMakeLists.txt.new  README.md  build.sh  config.h.in  init_pattern_db.sql  pattern-library-gui.pro
pattern-library-gui/cmake/: FindGDSTK.cmake
pattern-library-gui/include/pattern-library/: Constants.h  Types.h
pattern-library-gui/resources/: styles
pattern-library-gui/scripts/: init_db.sh
pattern-library-gui/src/: main.cpp
pattern-library-gui/src/controllers/: DatabaseController.cpp  DatabaseController.h  PatternController.cpp  PatternController.h
pattern-library-gui/src/models/: PatternModel.cpp  PatternModel.h  SearchModel.cpp  SearchModel.h
pattern-library-gui/src/ui/: MainWindow.cpp  MainWindow.h  PatternBrowser.cpp  PatternBrowser.h  PatternViewer.cpp  PatternViewer.h  mainwindow.ui
pattern-library-gui/src/utils/: FileHandler.cpp  FileHandler.h  GeometryUtils.cpp  GeometryUtils.h  ImportExport.cpp  ImportExport.h
pattern-library-gui/tests/integration/: CMakeLists.txt
pattern-library-gui/tests/unit/: CMakeLists.txt
pattern-library-gui/ui/: mainwindow.ui  patternbrowser.ui  patternviewer.ui
